:bug: Fix bugs of author's name and adjust z-index

--- a/src/css/slick.css
+++ b/src/css/slick.css
@@ -26,8 +26,10 @@
     overflow: hidden;
 
     margin: 0;
-    padding: 0;
+    padding: 1rem 2.5rem !important;
 }
+
+
 .slick-list:focus
 {
     outline: none;
